データセット読み取り

--- a/backpack/backpack.ipynb
+++ b/backpack/backpack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -226,6 +226,401 @@
     "print(\"extra_data\")\n",
     "print(f\"Number of Rows: {num_extra_rows}\")\n",
     "print(f\"Number of columns: {num_extra_columns}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Feature</th>\n",
+       "      <th>[TRAIN] No. of Missing Values</th>\n",
+       "      <th>[TRAIN] % of missing Values</th>\n",
+       "      <th>[TEST] No.of Missing Values</th>\n",
+       "      <th>[TEST] % of Missing Values</th>\n",
+       "      <th>[EXTRA] No.of Missing Values</th>\n",
+       "      <th>[EXTRA] % of Missing Values</th>\n",
+       "      <th>No. of Unique Values[FROM TRAIN]</th>\n",
+       "      <th>DataType</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>id</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>300000</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Brand</td>\n",
+       "      <td>9705</td>\n",
+       "      <td>3.235000</td>\n",
+       "      <td>6227.0</td>\n",
+       "      <td>3.1135</td>\n",
+       "      <td>117053</td>\n",
+       "      <td>3.168460</td>\n",
+       "      <td>5</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Material</td>\n",
+       "      <td>8347</td>\n",
+       "      <td>2.782333</td>\n",
+       "      <td>5613.0</td>\n",
+       "      <td>2.8065</td>\n",
+       "      <td>102615</td>\n",
+       "      <td>2.777644</td>\n",
+       "      <td>4</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Size</td>\n",
+       "      <td>6595</td>\n",
+       "      <td>2.198333</td>\n",
+       "      <td>4381.0</td>\n",
+       "      <td>2.1905</td>\n",
+       "      <td>81190</td>\n",
+       "      <td>2.197699</td>\n",
+       "      <td>3</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Compartments</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Laptop Compartment</td>\n",
+       "      <td>7444</td>\n",
+       "      <td>2.481333</td>\n",
+       "      <td>4962.0</td>\n",
+       "      <td>2.4810</td>\n",
+       "      <td>91089</td>\n",
+       "      <td>2.465651</td>\n",
+       "      <td>2</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Waterproof</td>\n",
+       "      <td>7050</td>\n",
+       "      <td>2.350000</td>\n",
+       "      <td>4811.0</td>\n",
+       "      <td>2.4055</td>\n",
+       "      <td>87274</td>\n",
+       "      <td>2.362385</td>\n",
+       "      <td>2</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Style</td>\n",
+       "      <td>7970</td>\n",
+       "      <td>2.656667</td>\n",
+       "      <td>5153.0</td>\n",
+       "      <td>2.5765</td>\n",
+       "      <td>96210</td>\n",
+       "      <td>2.604270</td>\n",
+       "      <td>3</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Color</td>\n",
+       "      <td>9950</td>\n",
+       "      <td>3.316667</td>\n",
+       "      <td>6785.0</td>\n",
+       "      <td>3.3925</td>\n",
+       "      <td>123667</td>\n",
+       "      <td>3.347492</td>\n",
+       "      <td>6</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Weight Capacity (kg)</td>\n",
+       "      <td>138</td>\n",
+       "      <td>0.046000</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>0.0385</td>\n",
+       "      <td>1670</td>\n",
+       "      <td>0.045205</td>\n",
+       "      <td>181596</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Price</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>48212</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Feature  [TRAIN] No. of Missing Values  \\\n",
+       "0                     id                              0   \n",
+       "1                  Brand                           9705   \n",
+       "2               Material                           8347   \n",
+       "3                   Size                           6595   \n",
+       "4           Compartments                              0   \n",
+       "5     Laptop Compartment                           7444   \n",
+       "6             Waterproof                           7050   \n",
+       "7                  Style                           7970   \n",
+       "8                  Color                           9950   \n",
+       "9   Weight Capacity (kg)                            138   \n",
+       "10                 Price                              0   \n",
+       "\n",
+       "    [TRAIN] % of missing Values  [TEST] No.of Missing Values  \\\n",
+       "0                      0.000000                          0.0   \n",
+       "1                      3.235000                       6227.0   \n",
+       "2                      2.782333                       5613.0   \n",
+       "3                      2.198333                       4381.0   \n",
+       "4                      0.000000                          0.0   \n",
+       "5                      2.481333                       4962.0   \n",
+       "6                      2.350000                       4811.0   \n",
+       "7                      2.656667                       5153.0   \n",
+       "8                      3.316667                       6785.0   \n",
+       "9                      0.046000                         77.0   \n",
+       "10                     0.000000                          NaN   \n",
+       "\n",
+       "    [TEST] % of Missing Values  [EXTRA] No.of Missing Values  \\\n",
+       "0                       0.0000                             0   \n",
+       "1                       3.1135                        117053   \n",
+       "2                       2.8065                        102615   \n",
+       "3                       2.1905                         81190   \n",
+       "4                       0.0000                             0   \n",
+       "5                       2.4810                         91089   \n",
+       "6                       2.4055                         87274   \n",
+       "7                       2.5765                         96210   \n",
+       "8                       3.3925                        123667   \n",
+       "9                       0.0385                          1670   \n",
+       "10                         NaN                             0   \n",
+       "\n",
+       "    [EXTRA] % of Missing Values  No. of Unique Values[FROM TRAIN] DataType  \n",
+       "0                      0.000000                            300000    int64  \n",
+       "1                      3.168460                                 5   object  \n",
+       "2                      2.777644                                 4   object  \n",
+       "3                      2.197699                                 3   object  \n",
+       "4                      0.000000                                10  float64  \n",
+       "5                      2.465651                                 2   object  \n",
+       "6                      2.362385                                 2   object  \n",
+       "7                      2.604270                                 3   object  \n",
+       "8                      3.347492                                 6   object  \n",
+       "9                      0.045205                            181596  float64  \n",
+       "10                     0.000000                             48212  float64  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "missing_values_train = pd.DataFrame({\"Feature\": train.columns,\n",
+    "                                     \"[TRAIN] No. of Missing Values\": train.isnull().sum().values,\n",
+    "                                     \"[TRAIN] % of missing Values\": ((train.isnull().sum().values) / len(train)*100 )})\n",
+    "\n",
+    "missing_values_test = pd.DataFrame({'Feature': test.columns,\n",
+    "                             '[TEST] No.of Missing Values': test.isnull().sum().values,\n",
+    "                             '[TEST] % of Missing Values': ((test.isnull().sum().values)/len(test)*100)})\n",
+    "\n",
+    "missing_values_extra = pd.DataFrame({'Feature': extra.columns,\n",
+    "                             '[EXTRA] No.of Missing Values': extra.isnull().sum().values,\n",
+    "                             '[EXTRA] % of Missing Values': ((extra.isnull().sum().values)/len(extra)*100)})\n",
+    "\n",
+    "unique_values = pd.DataFrame({'Feature': train.columns,\n",
+    "                              'No. of Unique Values[FROM TRAIN]': train.nunique().values})\n",
+    "\n",
+    "feature_types = pd.DataFrame({'Feature': train.columns,\n",
+    "                              'DataType': train.dtypes})\n",
+    "\n",
+    "merged_df = pd.merge(missing_values_train, missing_values_test, on=\"Feature\", how=\"left\")\n",
+    "merged_df = pd.merge(merged_df, missing_values_extra, on='Feature', how=\"left\")\n",
+    "merged_df = pd.merge(merged_df, unique_values, on=\"Feature\", how=\"left\")\n",
+    "merged_df = pd.merge(merged_df, feature_types, on=\"Feature\", how=\"left\")\n",
+    "\n",
+    "merged_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of duplicate rows in train:0\n",
+      "Number of duplicate rows in test:0\n",
+      "Number of duplicate rows in extra:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_duplicates = train.duplicated().sum()\n",
+    "\n",
+    "test_duplicates = test.duplicated().sum()\n",
+    "\n",
+    "extra_duplicates = test.duplicated().sum()\n",
+    "\n",
+    "print(f\"Number of duplicate rows in train:{train_duplicates}\")\n",
+    "print(f\"Number of duplicate rows in test:{test_duplicates}\")\n",
+    "print(f\"Number of duplicate rows in extra:{extra_duplicates}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>mean</th>\n",
+       "      <th>std</th>\n",
+       "      <th>min</th>\n",
+       "      <th>25%</th>\n",
+       "      <th>50%</th>\n",
+       "      <th>75%</th>\n",
+       "      <th>max</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <td>300000.0</td>\n",
+       "      <td>149999.500000</td>\n",
+       "      <td>86602.684716</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>74999.750000</td>\n",
+       "      <td>149999.500000</td>\n",
+       "      <td>224999.250000</td>\n",
+       "      <td>299999.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Compartments</th>\n",
+       "      <td>300000.0</td>\n",
+       "      <td>5.443590</td>\n",
+       "      <td>2.890766</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Weight Capacity (kg)</th>\n",
+       "      <td>299862.0</td>\n",
+       "      <td>18.029994</td>\n",
+       "      <td>6.966914</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>12.097867</td>\n",
+       "      <td>18.068614</td>\n",
+       "      <td>24.002375</td>\n",
+       "      <td>30.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Price</th>\n",
+       "      <td>300000.0</td>\n",
+       "      <td>81.411107</td>\n",
+       "      <td>39.039340</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>47.384620</td>\n",
+       "      <td>80.956120</td>\n",
+       "      <td>115.018160</td>\n",
+       "      <td>150.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         count           mean           std   min  \\\n",
+       "id                    300000.0  149999.500000  86602.684716   0.0   \n",
+       "Compartments          300000.0       5.443590      2.890766   1.0   \n",
+       "Weight Capacity (kg)  299862.0      18.029994      6.966914   5.0   \n",
+       "Price                 300000.0      81.411107     39.039340  15.0   \n",
+       "\n",
+       "                               25%            50%            75%       max  \n",
+       "id                    74999.750000  149999.500000  224999.250000  299999.0  \n",
+       "Compartments              3.000000       5.000000       8.000000      10.0  \n",
+       "Weight Capacity (kg)     12.097867      18.068614      24.002375      30.0  \n",
+       "Price                    47.384620      80.956120     115.018160     150.0  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train.describe().T"
    ]
   },
   {
