--- a/backpack/backpack.ipynb
+++ b/backpack/backpack.ipynb
@@ -1005,11 +1005,37 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "def perform_feature_engineering(df):\n",
-    "  # Brand Material Interaction - Certain materials may be common for specific brands\n",
-    "  df[\"Brand_Material\"] = df[\"Brand\"] + \"_\" + df[\"Material\"]\n",
-    "  \n",
-    "  # Brand & Size Interaction - Some brands may produce only specific sizes\n",
-    "  df['Brand_Size'] = df['Brand'] + '_' + df['Size']"
+    "    # Brand Material Interaction - Certain materials may be common for specific brands\n",
+    "    df['Brand_Material'] = df['Brand'] + '_' + df['Material']\n",
+    "\n",
+    "    # Brand & Size Interaction - Some brands may produce only specific sizes\n",
+    "    df['Brand_Size'] = df['Brand'] + '_' + df['Size']\n",
+    "\n",
+    "    # Has Laptop Compartment - Convert Yes/No to 1/0 for easier analysis\n",
+    "    df['Has_Laptop_Compartment'] = df['Laptop Compartment'].map({'Yes': 1, 'No': 0})\n",
+    "\n",
+    "    # Is Waterproof - Convert Yes/No to 1/0 for easier analysis\n",
+    "    df['Is_Waterproof'] = df['Waterproof'].map({'Yes': 1, 'No': 0})\n",
+    "\n",
+    "    # Compartments Binning - Group compartments into categories\n",
+    "    df['Compartments_Category'] = pd.cut(df['Compartments'], bins=[0, 2, 5, 10, np.inf], labels=['Few', 'Moderate', 'Many', 'Very Many'])\n",
+    "\n",
+    "    # Weight Capacity Ratio - Normalize weight capacity using the max value\n",
+    "    df['Weight_Capacity_Ratio'] = df['Weight Capacity (kg)'] / df['Weight Capacity (kg)'].max()\n",
+    "\n",
+    "    # Interaction Feature: Weight vs. Compartments - Some bags may hold more with less compartments\n",
+    "    df['Weight_to_Compartments'] = df['Weight Capacity (kg)'] / (df['Compartments'] + 1)  # Avoid division by zero\n",
+    "\n",
+    "    # Style and Size Interaction - Certain styles may correlate with sizes\n",
+    "    df['Style_Size'] = df['Style'] + '_' + df['Size']\n",
+    "\n",
+    "    return df\n",
+    "\n",
+    "# Apply the function to the training data\n",
+    "train_data = perform_feature_engineering(train_data)\n",
+    "\n",
+    "# Apply the function to the test data\n",
+    "test_data = perform_feature_engineering(test_data)"
    ]
   }
  ],
