--- a/backpack/backpack.ipynb
+++ b/backpack/backpack.ipynb
@@ -1032,10 +1032,10 @@
     "    return df\n",
     "\n",
     "# Apply the function to the training data\n",
-    "train_data = perform_feature_engineering(train_data)\n",
+    "train_data = perform_feature_engineering(train)\n",
     "\n",
     "# Apply the function to the test data\n",
-    "test_data = perform_feature_engineering(test_data)"
+    "test_data = perform_feature_engineering(test)"
    ]
   }
  ],
