--- a/backpack/backpack.ipynb
+++ b/backpack/backpack.ipynb
@@ -1219,7 +1219,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# [FOR TEST]\n",
+    "# Identify features with skewness greater than 0.75\n",
+    "skewed_features = test_data[numerical_variables].skew()[test_data[numerical_variables].skew() > 0.75].index.values\n",
+    "\n",
+    "# Print the list of variables to be transformed\n",
+    "print(\"Features to be transformed (skewness > 0.75):\")\n",
+    "display(skewed_features)\n",
+    "\n",
+    "# Plot skewed features before transformation\n",
+    "for feature in skewed_features:\n",
+    "    plt.figure(figsize=(8, 4))\n",
+    "    sns.histplot(test_data[feature], bins=50, kde=True, color='blue')\n",
+    "    plt.title(f'Distribution of {feature} before log transformation')\n",
+    "    plt.show()\n",
+    "\n",
+    "# Apply log1p transformation to skewed features\n",
+    "test_data[skewed_features] = np.log1p(test_data[skewed_features])"
+   ]
   }
  ],
  "metadata": {
