--- a/backpack/backpack.ipynb
+++ b/backpack/backpack.ipynb
@@ -1216,9 +1216,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features to be transformed (skewness > 0.75):\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# [FOR TEST]\n",
     "# Identify features with skewness greater than 0.75\n",
@@ -1238,6 +1255,27 @@
     "# Apply log1p transformation to skewed features\n",
     "test_data[skewed_features] = np.log1p(test_data[skewed_features])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot skewed features after transformation\n",
+    "for feature in skewed_features:\n",
+    "  plt.figure(figsize=(8, 4))\n",
+    "  sns.histplot(test[feature], bins=50, kde=True, color=\"green\")\n",
+    "  plt.title(f\"Distribution of {feature} after log transformation\")\n",
+    "  plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
