--- a/backpack/backpack.ipynb
+++ b/backpack/backpack.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "4        Yes  Messenger  Green             17.749338   86.02312  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "10                     0.000000                             48212  float64  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
        "Price                    47.384620      80.956120     115.018160     150.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -885,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1258,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1268,6 +1268,382 @@
     "  sns.histplot(test[feature], bins=50, kde=True, color=\"green\")\n",
     "  plt.title(f\"Distribution of {feature} after log transformation\")\n",
     "  plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Selecting specific columns for encoding\n",
+    "columns_to_encode = ['Brand', 'Material', 'Size', 'Laptop Compartment','Waterproof', 'Style', 'Color','Brand_Material', 'Brand_Size', 'Has_Laptop_Compartment','Is_Waterproof', 'Compartments_Category', 'Style_Size']\n",
+    "train_to_encode = train[columns_to_encode]\n",
+    "test_to_encode = test[columns_to_encode]\n",
+    "\n",
+    "# Dropping selected columns for scaling\n",
+    "train_to_scale = train.drop(columns_to_encode, axis=1)\n",
+    "test_to_scale = test.drop(columns_to_encode, axis=1)\n",
+    "\n",
+    "train_encoded = pd.get_dummies(train_to_encode, columns=columns_to_encode, drop_first=True)\n",
+    "test_encoded = pd.get_dummies(test_to_encode, columns=columns_to_encode, drop_first=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Brand_Jansport</th>\n",
+       "      <th>Brand_Nike</th>\n",
+       "      <th>Brand_Puma</th>\n",
+       "      <th>Brand_Under Armour</th>\n",
+       "      <th>Material_Leather</th>\n",
+       "      <th>Material_Nylon</th>\n",
+       "      <th>Material_Polyester</th>\n",
+       "      <th>Size_Medium</th>\n",
+       "      <th>Size_Small</th>\n",
+       "      <th>Laptop Compartment_Yes</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Compartments_Category_Many</th>\n",
+       "      <th>Compartments_Category_Very Many</th>\n",
+       "      <th>Style_Size_Backpack_Medium</th>\n",
+       "      <th>Style_Size_Backpack_Small</th>\n",
+       "      <th>Style_Size_Messenger_Large</th>\n",
+       "      <th>Style_Size_Messenger_Medium</th>\n",
+       "      <th>Style_Size_Messenger_Small</th>\n",
+       "      <th>Style_Size_Tote_Large</th>\n",
+       "      <th>Style_Size_Tote_Medium</th>\n",
+       "      <th>Style_Size_Tote_Small</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 64 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Brand_Jansport  Brand_Nike  Brand_Puma  Brand_Under Armour  \\\n",
+       "0            True       False       False               False   \n",
+       "1            True       False       False               False   \n",
+       "2           False       False       False                True   \n",
+       "3           False        True       False               False   \n",
+       "4           False       False       False               False   \n",
+       "\n",
+       "   Material_Leather  Material_Nylon  Material_Polyester  Size_Medium  \\\n",
+       "0              True           False               False         True   \n",
+       "1             False           False               False        False   \n",
+       "2              True           False               False        False   \n",
+       "3             False            True               False        False   \n",
+       "4             False           False               False         True   \n",
+       "\n",
+       "   Size_Small  Laptop Compartment_Yes  ...  Compartments_Category_Many  \\\n",
+       "0       False                    True  ...                        True   \n",
+       "1        True                    True  ...                        True   \n",
+       "2        True                    True  ...                       False   \n",
+       "3        True                    True  ...                        True   \n",
+       "4       False                    True  ...                       False   \n",
+       "\n",
+       "   Compartments_Category_Very Many  Style_Size_Backpack_Medium  \\\n",
+       "0                            False                       False   \n",
+       "1                            False                       False   \n",
+       "2                            False                       False   \n",
+       "3                            False                       False   \n",
+       "4                            False                       False   \n",
+       "\n",
+       "   Style_Size_Backpack_Small  Style_Size_Messenger_Large  \\\n",
+       "0                      False                       False   \n",
+       "1                      False                       False   \n",
+       "2                      False                       False   \n",
+       "3                      False                       False   \n",
+       "4                      False                       False   \n",
+       "\n",
+       "   Style_Size_Messenger_Medium  Style_Size_Messenger_Small  \\\n",
+       "0                        False                       False   \n",
+       "1                        False                        True   \n",
+       "2                        False                        True   \n",
+       "3                        False                        True   \n",
+       "4                         True                       False   \n",
+       "\n",
+       "   Style_Size_Tote_Large  Style_Size_Tote_Medium  Style_Size_Tote_Small  \n",
+       "0                  False                    True                  False  \n",
+       "1                  False                   False                  False  \n",
+       "2                  False                   False                  False  \n",
+       "3                  False                   False                  False  \n",
+       "4                  False                   False                  False  \n",
+       "\n",
+       "[5 rows x 64 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_encoded.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "\n",
+    "# Initialize MinMaxScaler\n",
+    "minmax_scaler = MinMaxScaler()\n",
+    "\n",
+    "# Fit the scaler on the training data \n",
+    "minmax_scaler.fit(train_to_scale.drop([\"Price\"], axis=1))\n",
+    "\n",
+    "# Scale the training data \n",
+    "scaled_data_train = minmax_scaler.transform(train_to_scale.drop([\"Price\"], axis=1))\n",
+    "scaled_train_df = pd.DataFrame(scaled_data_train, columns=train_to_scale.drop([\"Price\"], axis=1).columns)\n",
+    "\n",
+    "# Scale the test data using the parameters from the training data\n",
+    "scaled_data_test = minmax_scaler.transform(test_to_scale)\n",
+    "scaled_test_df = pd.DataFrame(scaled_data_test, columns=test_to_scale.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Compartments</th>\n",
+       "      <th>Weight Capacity (kg)</th>\n",
+       "      <th>Weight_Capacity_Ratio</th>\n",
+       "      <th>Weight_to_Compartments</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.666667</td>\n",
+       "      <td>0.264469</td>\n",
+       "      <td>0.264469</td>\n",
+       "      <td>0.077360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.883141</td>\n",
+       "      <td>0.883141</td>\n",
+       "      <td>0.155752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.111111</td>\n",
+       "      <td>0.465750</td>\n",
+       "      <td>0.465750</td>\n",
+       "      <td>0.395240</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.777778</td>\n",
+       "      <td>0.317489</td>\n",
+       "      <td>0.317489</td>\n",
+       "      <td>0.076274</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.509974</td>\n",
+       "      <td>0.509974</td>\n",
+       "      <td>0.653391</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Compartments  Weight Capacity (kg)  Weight_Capacity_Ratio  \\\n",
+       "0      0.666667              0.264469               0.264469   \n",
+       "1      1.000000              0.883141               0.883141   \n",
+       "2      0.111111              0.465750               0.465750   \n",
+       "3      0.777778              0.317489               0.317489   \n",
+       "4      0.000000              0.509974               0.509974   \n",
+       "\n",
+       "   Weight_to_Compartments  \n",
+       "0                0.077360  \n",
+       "1                0.155752  \n",
+       "2                0.395240  \n",
+       "3                0.076274  \n",
+       "4                0.653391  "
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scaled_train_df.head()"
    ]
   },
   {
